@@ -1,5 +1,11 @@
 2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/jfs.cc,
+	  src/xfs.cc: replaced translatable string 'umount' with 'unmount'
+	  (#328419)
+
+2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* use Glib::get_tmp_dir() instead of hardcoding it as '/tmp'
 	* use Glib::find_program_in_path() instead af a system/which combi
 	* display current device in windowtitle
